--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,18 @@ anyhow = "1.0.82"
 egui = "0.27.2"
 eframe = "0.27.2"
 winapi = {version = "0.3.9", features = ["minwindef", "fileapi", "winbase", "winnt"] }
-windows = "0.56.0"
+zip = "1.1.1"
+windows-result = "0.1.1"
+walkdir = "2.5.0"
+# zip = "1.1.1"
+# windows = "0.56.0"
+
+[dependencies.windows]
+version = "0.56.0"
+features = [
+    "Data_Xml_Dom",
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+]
